force-app/main/default/objects/Terms_And_Conditions_Acceptance__c/Terms_And_Conditions_Acceptance__c.object-meta.xml
<CustomObject>
    <label>Terms And Conditions Acceptance</label>
    <nameField>
        <displayFormat>TCA-{000000}</displayFormat>
        <label>Terms And Conditions Acceptance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms And Conditions Acceptance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>