force-app/main/default/objects/Terms_And_Conditions_Acceptance__c/fields/Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions__c</fullName>
    <label>Terms And Conditions</label>
    <referenceTo>Terms_And_Conditions__c</referenceTo>
    <relationshipLabel>Terms And Conditions Acceptance</relationshipLabel>
    <relationshipName>Terms_And_Conditions_Acceptance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>