force-app/main/default/objects/Terms_And_Conditions_Acceptance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>User__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Terms_And_Conditions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>